--- a/_sass/template/partials/_pdf-title-pages.scss
+++ b/_sass/template/partials/_pdf-title-pages.scss
@@ -95,14 +95,13 @@ $pdf-title-pages: true !default;
             margin-left: 50%;			
 			string-set: book-copyright content(text);
 		}
-		.title-page-version-label {
+		.title-page-subtitle {
 			position: absolute;
 			text-align: right;
 			right: 0;
 			top: -20px;
 			font-size: $font-size-default * 1;
 			font-weight: bold;
-			font-family: $font-display-main;
 		}
 	}
 
