--- a/_sass/theme/pdf-rules.scss
+++ b/_sass/theme/pdf-rules.scss
@@ -10,5 +10,7 @@
 @import "theme/partials/print-notes";
 @import "theme/partials/print-pdf-view";
 @import "theme/partials/print-toc";
+@import "theme/partials/print-list-of-figures";
+@import "theme/partials/print-list-of-tables";
 @import "theme/partials/print-typography";
 @import "theme/partials/print-helpers";
